--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,7 @@ trigger:
   branches:
     include:
     - master
-    - QA
-  
+    #- QA
     
 
 pr: none
@@ -15,7 +14,7 @@ pool:
 
 stages:
 - stage: Build
-  displayName: 'Build Docker images'
+  displayName: 'Build Docker image'
   jobs:
   - job: BuildAndPushDocker
     pool:
@@ -23,16 +22,16 @@ stages:
     steps:
    
     
-    # - task: Docker@2
-    #   inputs:
-    #     containerRegistry: 'docker'
-    #     repository: 'dineshmk/node-app'
-    #     command: 'buildAndPush'
-    #     Dockerfile: '**/Dockerfile'
-    #     tags: 'latest'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'docker'
+        repository: 'dineshmk/node-app'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: 'latest'
 
-   
-
+     
+      
     - task: AzureCLI@2
       name: terraformApply
       inputs:
@@ -41,70 +40,34 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: |
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
-          client_id=$(AZURE_CLIENT_ID)
-          echo $client_id
-          echo "##vso[task.setvariable variable=test]$client_id"
-          echo $(test)
-
-          ient_id=$(AZURE_CLIENT_ID)
-          echo $ient_pwd
-          echo "##vso[task.setvariable variable=best]$ient_id"
-          echo $(best)
-
-          lient_id=$(AZURE_CLIENT_ID)
-          echo $lient_id
-          echo "##vso[task.setvariable variable=rest]$lient_id"
-          echo $(rest)
-
-         
-
-
       
+            export TF_VAR_user_name="$(USER_NAME)"
+            export TF_VAR_user_password="$(USER_PASSWORD)"
+            export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
 
-    #         export TF_VAR_user_name="$(USER_NAME)"
-    #         export TF_VAR_user_password="$(USER_PASSWORD)"
-    #         export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
-
-    #            terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
-    #            terraform destroy --auto-approve
-    #         terraform plan                
-    #         terraform apply --auto-approve
-            
-    #        client_id=$(terraform output kubelet_identity_client_id)
-              
+             terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
+          #  terraform destroy --auto-approve
+            terraform plan                
+            terraform apply --auto-approve
+           client_id=$(terraform output kubelet_identity_client_id)
+           echo $client_id
+           echo "##vso[task.setvariable variable=test]$client_id"
+           echo $(test)
 
     - task: Bash@3
       inputs:
         targetType: 'inline'
         script: |
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
-            # az login --service-principal -u $(AZURE_CLIENT_ID) -p $(AZURE_CLIENT_SECRET) --tenant $(AZURE_TENANT_ID)
-            # az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-              export new_id=$(rest)
-              echo $new_id
-              envsubst '${new_id}' < webapp-deployment.yaml > webapp-deployment-new.yaml
-              kubectl apply -f webapp-deployment-new.yaml
-              cat webapp-deployment-new.yaml
-
-              export new_test=$(test)
-              echo $test
-              envsubst '${new_test}' < secretsproviderclass.yaml > secretsproviderclass-new.yaml
-              cat secretsproviderclass-new.yaml
-
-              export new_pwd=$(AZURE_CLIENT_ID)
-              echo $new_pwd
-              envsubst '${new_pwd}' < webapp-deployment-new.yaml > webapp-deployment-nnew.yaml
-              kubectl apply -f webapp-deployment-new.yaml
-              cat webapp-deployment-nnew.yaml
-            #   kubectl apply -f secretsproviderclass-new.yaml
-
-             
-          
-
-              # kubectl apply -f webapp-service.yaml
-              # kubectl apply -f db-deployment.yaml
-              # kubectl apply -f db-service.yaml
-              # kubectl apply -f hpaweb.yaml
-              # cat secretsproviderclass-new.yaml
-              # cat webapp-deployment.yaml
-
+          az login --service-principal -u $(AZURE_CLIENT_ID) -p $(AZURE_CLIENT_SECRET) --tenant $(AZURE_TENANT_ID)
+          az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
+          export new_test=$(test)
+          envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
+          kubectl apply -f secretsproviderclass-new.yaml
+          kubectl apply -f webapp-deployment.yaml
+          kubectl apply -f webapp-service.yaml
+          kubectl apply -f db-deployment.yaml
+          kubectl apply -f db-service.yaml
+          kubectl apply -f hpaweb.yaml
+          cat secretsproviderclass-new.yaml
+          cat webapp-deployment.yaml
