--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,10 +13,10 @@ pool:
   name: Agent001
 
 stages:
-- stage: Build
-  displayName: 'Build Docker image'
+- stage: Destroy
+  displayName: 'Destroy infrastructure'
   jobs:
-  - job: BuildAndPushDocker
+  - job: Destroy
     pool:
       name: Agent001
     steps:
