--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,7 +64,7 @@ stages:
             envsubst '${new_test}' < secretsproviderclass.yaml > secretsproviderclass-new.yaml
             kubectl apply -f secretsproviderclass-new.yaml
 
-            export new_id=$(AZURE_CLIENT_ID)
+            export new_id=$(AZURE_CLIENT)
             envsubst '${new_id}' < webapp-deployment.yaml > webapp-deployment-new.yaml
 
             export new_pwd=$(AZURE_CLIENT_SECRET)
