--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ trigger:
 pr: none
 
 pool:
-  name: Agent001
+  name: my_agents
 
 stages:
 - stage: Build
@@ -18,7 +18,7 @@ stages:
   jobs:
   - job: BuildAndPushDocker
     pool:
-      name: Agent001
+      name: my_agents
     steps:
    
     
