--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,7 +12,7 @@ trigger:
 pr: none
 
 pool:
-  name: Agent0001
+  name: my_agents
 
 stages:
 - stage: Destroy
@@ -20,7 +20,7 @@ stages:
   jobs:
   - job: Destroy
     pool:
-      name: Agent0001
+      name: my_agents
     steps:
    
     
