--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,13 +22,13 @@ stages:
     steps:
    
     
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'docker'
-        repository: 'dineshmk/node-app'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: 'latest'
+    # - task: Docker@2
+    #   inputs:
+    #     containerRegistry: 'docker'
+    #     repository: 'dineshmk/node-app'
+    #     command: 'buildAndPush'
+    #     Dockerfile: '**/Dockerfile'
+    #     tags: 'latest'
 
     - task: AzureCLI@2
       name: terraformApply
@@ -38,18 +38,18 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: |
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
-                
-                      export TF_VAR_user_name="$(USER_NAME)"
-                      export TF_VAR_user_password="$(USER_PASSWORD)"
-                      export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
+           echo "hii dinesh"     
+                      # export TF_VAR_user_name="$(USER_NAME)"
+                      # export TF_VAR_user_password="$(USER_PASSWORD)"
+                      # export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
           
-                        terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
-                        terraform plan                
-                        terraform apply --auto-approve
-                      client_id=$(terraform output kubelet_identity_client_id)
-                      echo $client_id
-                      echo "##vso[task.setvariable variable=test]$client_id"
-                      echo $(test)
+                      #   terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
+                      #   terraform plan                
+                      #   terraform apply --auto-approve
+                      # client_id=$(terraform output kubelet_identity_client_id)
+                      # echo $client_id
+                      # echo "##vso[task.setvariable variable=test]$client_id"
+                      # echo $(test)
     
     # - task: AzureCLI@2
     #   name: terraformApply
