--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,13 +38,15 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: |
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
-           
+          echo "Hi"
           export TF_VAR_user_name="$(USER_NAME)"
           export TF_VAR_user_password="$(USER_PASSWORD)"
           export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
-
+          echo "Dinesh"
           terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
-          terraform plan                
+          echo "Dinu"
+          terraform plan
+          echo "Dmk"                
           terraform apply --auto-approve
           client_id=$(terraform output kubelet_identity_client_id)
           echo $client_id
