--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,9 +45,9 @@ stages:
           echo "Dinesh"
           terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
           echo "Dinu"
-          terraform plan
+          terraform plan -lock=false
           echo "Dmk"                
-          terraform apply --auto-approve
+          terraform apply --auto-approve -lock=false
           client_id=$(terraform output kubelet_identity_client_id)
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
