--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,8 @@ stages:
           export TF_VAR_user_password="$(USER_PASSWORD)"
           export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
           echo "Dinesh"
-          terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
+       #  terraform init   -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
+          terraform init
           echo "Dinu"
           terraform plan 
           echo "Dmk"                
