--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,9 +48,9 @@ stages:
 
       
           echo "Dinu"
-          terraform plan 
+          terraform plan -lock=false
           echo "Dmk"                
-          terraform apply --auto-approve 
+          terraform apply --auto-approve  -lock=false
           client_id=$(terraform output kubelet_identity_client_id)
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
