--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,9 +49,9 @@ stages:
 
       
           echo "Dinu"
-          terraform plan -lock=false
+          terraform plan 
           echo "Dmk"                
-          terraform apply --auto-approve  -lock=false
+          terraform apply --auto-approve 
           client_id=$(terraform output kubelet_identity_client_id)
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
