--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,12 +45,12 @@ stages:
           echo "Dinesh"
           
           terraform init -upgrade -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
-   
+        
 
       
-          echo "Dinu"
-          terraform plan 
-          echo "Dmk"                
+          # echo "Dinu"
+          # terraform plan 
+          # echo "Dmk"                
           terraform apply --auto-approve 
           client_id=$(terraform output kubelet_identity_client_id)
           echo $client_id
