--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,9 +48,9 @@ stages:
         
 
       
-          # echo "Dinu"
-          # terraform plan 
-          # echo "Dmk"                
+          echo "Dinu"
+          terraform plan 
+          echo "Dmk"                
           terraform apply --auto-approve 
           client_id=$(terraform output kubelet_identity_client_id)
           echo $client_id
