--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,7 +28,7 @@ stages:
     - task: AzureCLI@2
       name: terraformApply
       inputs:
-        azureSubscription: 'azure'
+        azureSubscription: 'azure-sp'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
