--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ stages:
     - task: AzureCLI@2
       name: terraformApply
       inputs:
-        azureSubscription: 'azure'
+        azureSubscription: 'azure-sp'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
